Correct wrapping tabs when compiled

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -20,6 +20,13 @@
   }
 }
 
+@media (max-width: 767px) {
+
+  .nav-tabs > li > a {
+    padding: 10px 10px;
+  }
+}
+
 .modal-header.bg-primary
   background-color: $primary
 
@@ -180,8 +187,4 @@ input[type="file"].form-control {
 }
 .nav-tabs-simple.nav-tabs-right ul > li:after {
   left: 0;
-}
-
-.nav-tabs > li > a {
-  padding: 10px 10px;
 }
